# advent-of-code

./: .gitignore  README.md
2019/: README.md
2019/01/: Makefile  hello_world  main  main.c  main.h
2019/02/: main.c  test_input.txt
2019/03/: main.c  main.h
2019/04/: main.c  main.h
2019/05/: main.c  main.h
2019/06/: main.c  main.h  test_input.txt
2019/07/: main.c  main.h
2019/08/: main.c  main.h  test_input.txt
2019/09/: main.c  main.h
2019/10/: main.c  main.h
2019/11/: main.c  main.h
2019/12/: main.c  main.h
2019/13/: Doxyfile  Makefile  input.txt  main.c  main.h
2019/14/: main.c  main.h
2019/15/: main.c  main.h
2019/16/: .gitignore  Makefile  check_fft.check  configure.ac  fft.c  fft.h  main.c
2019/16/src/: Makefile.am  fft.c  main.c
2019/16/tests/: Makefile.am  check_fft.c
2019/17/: main.c  main.h
2019/18/: main.c  main.h
2019/19/: main.c  main.h
2019/21/: main.c  main.h  springscript.txt
2019/22/: main.c  main.h
2019/24/: main.c  main.h
2020/01/: Makefile  find2020Pair.ts  package.json
2020/02/: Makefile  countPasswords.ts  package-lock.json  package.json
2020/03/: Makefile  countTrees.ts  package-lock.json  package.json
2020/04/: Makefile  countPassports.ts  package-lock.json  tsconfig.json
2020/05/: Makefile  seats.ts
2020/06/: Makefile  declaration.ts  tsconfig.json
2020/07/: Makefile  luggage.ts  tsconfig.json
2020/08/: Makefile  bootcode.ts  tsconfig.json
2020/09/: Makefile  tsconfig.json  xmas.ts
2020/10/: Makefile  jolts.ts  tsconfig.json
2020/11/: seats.ts  tsconfig.json
2020/12/: Makefile  (+2 more)
(+54 files in other folders)
